Allow integrations to read an authorized course
